--- a/index.html
+++ b/index.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <script src="https://kit.fontawesome.com/ca89a4b9f5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylsheet" href="./assets/css/style.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/demo.css" /> -->
     <title>Cocktail Picker [TO BE CHANGED]</title>
 </head>
+
 <body>
-    <section>
-        <div>
-            <form id="ingredient-form">
-                <input type="text" id="entered-ingredient" />
-                <button type="submit">Search</button>
-            </form>
+    <div class="container is-max-widescreen">
+        <div class="notification is-primary">
+            <strong>Cocktail Pickers</strong>
         </div>
-        <div>
-            <ul id="list-of-drinks"></ul>
+    </div>
+
+    <section class="container is-max-widescreen">
+        <div class="columns">
+            <div class="column is-one-third">
+                <form class="panel" id="ingredient-form">
+                    <div class="panel-block">
+                        <p class="control has-icons-left">
+                            <input id="entered-ingredient" class="input is-info" type="text" placeholder="Search">
+                            <span class="icon is-left">
+                                <i class="fas fa-search" aria-hidden="true"></i>
+                            </span>
+                        </p>
+                    </div>
+                    <div id="list-of-drinks"></div>
+                </form>
+            </div>
+            <div class="column is-two-thirds"></div>
+        </div>
+
+
+
         </div>
     </section>
-  
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
