added the display drink card function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
                     <div id="list-of-drinks"></div>
                 </form>
             </div>
-            <div class="column is-two-thirds"></div>
+            <div class="column is-two-thirds">
+                <div id="drink-card" class="card">
+
+                </div>
+            </div>
         </div>
     </section>
 
