added ingredients an d card styling

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <script src="https://kit.fontawesome.com/ca89a4b9f5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylsheet" href="./assets/css/style.css" />
-    <!-- <link rel="stylesheet" href="./assets/css/demo.css" /> -->
     <title>Happy Hour</title>
 </head>
 
@@ -38,15 +35,15 @@
                     <div id="list-of-drinks"></div>
                 </form>
             </div>
-            <div class="column is-two-thirds">
-                <div id="drink-card" class="card">
+            <div class="column is-one-third is-offset-4" style="position:fixed">
+                <div id="drink-card" class="card is-hidden">
 
                 </div>
             </div>
         </div>
     </section>
 
-
+    <script src="https://kit.fontawesome.com/ca89a4b9f5.js" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
