--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <div id="list-of-drinks"></div>
                 </form>
             </div>
-            <div class="column is-one-third is-offset-4" style="position:fixed">
-                <div id="drink-card" class="card is-hidden">
+            <div class="column is-one-third" style="position: relative;">
+                <div id="drink-card" class="card is-hidden" style="position: fixed;">
 
                 </div>
             </div>
