adding styling to app

--- a/index.html
+++ b/index.html
@@ -10,11 +10,27 @@
 </head>
 
 <body>
-    <div class="container tile is-ancestor">
-        <div class="notification is-warning tile is-6 has-text-warning-dark">
+    <header class="container tile is-ancestor">
+        <div class="notification is-warning tile is-4 has-text-warning-dark">
             <strong>Welcome to Happy Hour</strong>
         </div>
-    </div>
+    </header>
+    <hero class="tile is-ancestor is-offset-5">
+        <div class="tile is-parent">
+            <article class="tile is-child notification is-warning is-light">
+                <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Necessitatibus totam eligendi, atque veritatis officiis sint! Minus molestias
+                    laborum at natus, nostrum, ratione est sit eos veniam delectus numquam architecto
+                    doloribus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Necessitatibus totam eligendi, atque veritatis officiis sint! Minus molestias
+                    laborum at natus, nostrum, ratione est sit eos veniam delectus numquam architecto
+                    doloribus.
+
+                </p>
+            </article>
+        </div>
+    </hero>
 
     <section class="container tile is-ancestor">
         <div class="columns tile is-parent">
