--- a/index.html
+++ b/index.html
@@ -5,32 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <link rel="stylsheet" href="./assets/css/style.css" />
+    <link rel="stylsheet" type="text/css" href="./assets/css/style.css" />
     <title>Happy Hour</title>
 </head>
 
 <body>
-    <header class="container tile is-ancestor">
-        <div class="notification is-warning tile is-4 has-text-warning-dark">
-            <strong>Welcome to Happy Hour</strong>
-        </div>
+    <header class="tile is-ancestor">
+        <div class="tile is-4 is-vertical is-parent">
+            <div class="tile is-child px-5 mt-2 notification is-warning has-text-warning-dark">
+                <p class="title">Welcome to Happy Hour</p>
+                <p>Make the most of the liquor in your cabinet and those virtual happy hours. Impress your team with
+                    information about your newfound cocktail.</p>
+            </div>
     </header>
-    <hero class="tile is-ancestor is-offset-5">
-        <div class="tile is-parent">
-            <article class="tile is-child notification is-warning is-light">
-                <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Necessitatibus totam eligendi, atque veritatis officiis sint! Minus molestias
-                    laborum at natus, nostrum, ratione est sit eos veniam delectus numquam architecto
-                    doloribus.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Necessitatibus totam eligendi, atque veritatis officiis sint! Minus molestias
-                    laborum at natus, nostrum, ratione est sit eos veniam delectus numquam architecto
-                    doloribus.
-
-                </p>
-            </article>
-        </div>
-    </hero>
 
     <section class="container tile is-ancestor">
         <div class="columns tile is-parent">
@@ -51,9 +38,8 @@
                     <div id="list-of-drinks"></div>
                 </form>
             </div>
-            <div class="column is-one-third" style="position: relative;">
-                <div id="drink-card" class="card is-hidden" style="position: fixed;">
-
+            <div class="column is-two-thirds" style="position: relative;">
+                <div id="drink-card" class="card is-hidden" style="position:fixed;">
                 </div>
             </div>
         </div>
