--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <link rel="stylsheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <title>Happy Hour</title>
 </head>
 
 <body>
-    <header class="tile is-ancestor">
-        <div class="tile is-4 is-vertical is-parent">
-            <div class="tile is-child px-5 mt-2 notification is-warning has-text-warning-dark">
+    <header class="container columns">
+        <div class="column is-4">
+            <div class="px-5 notification is-dark">
                 <p class="title">Welcome to Happy Hour</p>
                 <p>Make the most of the liquor in your cabinet and those virtual happy hours. Impress your team with
                     information about your newfound cocktail.</p>
@@ -32,14 +32,14 @@
                             </span>
                         </div>
                         <div>
-                            <button class="button is-warning is-light" type="submit">Search</button>
+                            <button class="button is-info is-light" type="submit">Search</button>
                         </div>
                     </div>
                     <div id="list-of-drinks"></div>
                 </form>
             </div>
-            <div class="column is-two-thirds" style="position: relative;">
-                <div id="drink-card" class="card is-hidden" style="position:fixed;">
+            <div class="column is-two-thirds">
+                <div id="drink-card" class="card is-hidden sticky">
                 </div>
             </div>
         </div>
