--- a/index.html
+++ b/index.html
@@ -19,28 +19,25 @@
             </div>
     </header>
 
-    <section class="container tile is-ancestor">
-        <div class="columns tile is-parent">
-            <div class="column is-one-third tile is-child">
-                <form class="panel" id="ingredient-form">
-                    <div class="panel-block">
-                        <div class="control has-icons-left">
-                            <input id="entered-ingredient" class="input is-info" type="text"
-                                placeholder="Enter Ingredient">
-                            <span class="icon is-left">
-                                <i class="fas fa-search" aria-hidden="true"></i>
-                            </span>
-                        </div>
-                        <div>
-                            <button class="button is-info is-light" type="submit">Search</button>
-                        </div>
+    <section class="container columns switch">
+        <div class="column is-one-third">
+            <form class="panel" id="ingredient-form">
+                <div class="panel-block">
+                    <div class="control has-icons-left">
+                        <input id="entered-ingredient" class="input is-info" type="text" placeholder="Enter Ingredient">
+                        <span class="icon is-left">
+                            <i class="fas fa-search" aria-hidden="true"></i>
+                        </span>
                     </div>
-                    <div id="list-of-drinks"></div>
-                </form>
-            </div>
-            <div class="column is-two-thirds">
-                <div id="drink-card" class="card is-hidden sticky">
+                    <div>
+                        <button class="button is-info is-light" type="submit">Search</button>
+                    </div>
                 </div>
+                <div id="list-of-drinks"></div>
+            </form>
+        </div>
+        <div class="column is-two-thirds sticky">
+            <div id="drink-card" class="card is-hidden sticky">
             </div>
         </div>
     </section>
