add message for invalid ingredient

--- a/index.html
+++ b/index.html
@@ -35,14 +35,8 @@
                             <button class="button is-warning is-light" type="submit">Search</button>
                         </div>
                     </div>
-                    <div id="modal">
-                        <div class="modal-background"></div>
-                        <div class="modal-content">
-                            Not Valid Ingredient!
-                        </div>
-                        <button class="modal-close is-large" aria-label="close"></button>
-                      </div>
                     <div id="list-of-drinks"></div>
+                    <span id="error"></span>
                 </form>
             </div>
             <div class="column is-two-thirds" style="position: relative;">
@@ -52,6 +46,7 @@
         </div>
     </section>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/ca89a4b9f5.js" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
