added save button save drink name to local

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <p>Make the most of the liquor in your cabinet and those virtual happy hours. Impress your team with
                     information about your newfound cocktail.</p>
             </div>
+            <div id="saved-drinks"></div>
     </header>
 
     <section class="container columns switch">
