added styling to save button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
                 <p>Make the most of the liquor in your cabinet and those virtual happy hours. Impress your team with
                     information about your newfound cocktail.</p>
             </div>
+
+        </div>
+        <div class="column is-8">
             <div id="saved-drinks"></div>
+        </div>
+        
     </header>
 
     <section class="container columns switch">
