refactored display drink and added styling for the save button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         </div>
         <div class="column is-8">
-            <div id="saved-drinks"></div>
+            <div id="saved-drinks" class="px-5 notification is-light"></div>
         </div>
         
     </header>
