added styling to saved drinks and error handling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </span>
                     </div>
                     <div>
-                        <button class="button is-info is-light" type="submit">Search</button>
+                        <button class="button is-info is-outlined is-light" type="submit">Search</button>
                     </div>
                 </div>
                 <div class="px-2">
