added styling for thumbnail images and animation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="container columns switch">
         <div class="column is-one-third">
             <form class="panel" id="ingredient-form">
-                <div class="panel-block">
+                <div class="panel-block searchy">
                     <div class="control has-icons-left">
                         <input id="entered-ingredient" class="input is-info" type="text" placeholder="Enter Ingredient">
                         <span class="icon is-left">
